# bitrate-visualizer

./: LICENSE  README.md  index.js  package.json
.github/workflows/: release.yaml
ffprobe-bin/: .gitignore  copy.cjs  get.cjs
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
web/: index.html  main.js  style.css
