[package]
name = "bitrate-visualizer"
version = "1.0.0"
description = "Visualize the bitrate distribution of a VBR audio file in realtime."
authors = ["charlie0129"]
license = "MIT"
repository = "https://github.com/charlie0129/bitrate-visualizer"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["devtools", "protocol-asset", "shell-open", "shell-sidecar"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
